# swe_fs21

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  CMakeLists.txt.in  README.md
cmake/: GetGTest.cmake
gui/: zombiedice_ui.xd
mybuild/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  unit_tests
mybuild/GTestProject-prefix/src/GTestProject-stamp/: download-GTestProject.cmake  extract-GTestProject.cmake
mybuild/gtest_binary/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
mybuild/gtest_binary/googlemock/: CTestTestfile.cmake  Makefile  cmake_install.cmake
mybuild/gtest_binary/googlemock/gtest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
mybuild_sina/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  unit_tests
mybuild_sina/GTestProject-prefix/src/GTestProject-stamp/: download-GTestProject.cmake  extract-GTestProject.cmake
mybuild_sina/GTestProject-prefix/tmp/: GTestProject-cfgcmd.txt
mybuild_sina/gtest_binary/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
mybuild_sina/gtest_binary/googlemock/: CTestTestfile.cmake  Makefile  cmake_install.cmake
mybuild_sina/gtest_binary/googlemock/gtest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
rapidjson/: CMakeLists.txt
rapidjson/doc/: CMakeLists.txt  dom.md  dom.zh-cn.md  faq.zh-cn.md  internals.md  internals.zh-cn.md  tutorial.md  tutorial.zh-cn.md
rapidjson/example/: CMakeLists.txt
sockpp/: CMakeLists.txt
sockpp/src/: CMakeLists.txt
src/: default.conf  example.h.gch
src/common/game/: Cup.cpp  Cup.h  Die.cpp  Die.h  Game.cpp  Game.h  Player.cpp  Player.h  Turn.cpp  Turn.h
src/common/network/requests/: client_exit_lobby_request.cpp  client_exit_lobby_request.h  client_join_lobby_request.cpp  client_join_lobby_request.h  client_request.cpp  client_request.h  client_update_game_request.cpp  client_update_game_request.h  join_game_request.cpp  join_game_request.h  start_game_request.cpp  start_game_request.h
src/common/network/responses/: full_state_response.cpp  full_state_response.h  request_response.cpp  request_response.h  request_response_event.cpp  server_response.cpp  server_response.h  server_update_game_event.cpp  server_update_game_event.h  server_update_lobby_event.cpp  server_update_lobby_event.h  server_welcome_lobby_event.cpp  server_welcome_lobby_event.h
src/common/serialization/: unique_serializable.cpp  unique_serializable.h  value_type_helpers.h
src/gui/: GameController.cpp  GameController.h  main.cpp
src/gui/app/: ZombieDice.cpp
src/gui/network/: ClientNetworkManager.cpp  ClientNetworkManager.h  ResponseListenerThread.cpp  ResponseListenerThread.h
src/gui/panels/: ConnectionPanel.cpp  ConnectionPanel.h  LobbyPanel.cpp  LobbyPanel.h  MainGamePanel.cpp  MainGamePanel.h  StartPanel.cpp  StartPanel.h
src/gui/uiElements/: InputField.cpp  InputField.h
src/gui/windows/: GameWindow.cpp  GameWindow.h
src/include/common/exceptions/: ZombieException.h
src/include/common/game/: Cup.h  Game.h
src/include/common/network/requests/: client_exit_lobby_request.h  client_join_lobby_request.h  client_request.h
src/include/common/network/responses/: request_response_event.h
src/include/common/serialization/: json_utils.h  token_generator.h  uuid_generator.h
src/include/gui/app/: ZombieDice.h
src/include/gui/network/: ClientNetworkManager.h
src/include/gui/panels/: ConnectionPanel.h
src/include/gui/uiElements/: InputField.h
src/include/server/: game_instance.h  server_network_manager.h
src/server/: game_instance.cpp  game_instance.h  game_instance_manager.cpp  game_instance_manager.h  not_main.cpp  player_manager.cpp  player_manager.h  server_network_manager.cpp  server_network_manager.h  start_server.cpp  start_server.h
tests/: example_add.cpp
tests/common/: cup.cpp  die.cpp  exceptions.cpp  game.cpp  player.cpp  turn.cpp
